--- a/api/nbi/v1alpha/BUILD
+++ b/api/nbi/v1alpha/BUILD
@@ -31,7 +31,8 @@ proto_library(
         "//api/nbi/v1alpha/resources:nbi_resources_proto",
         "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:timestamp_proto",
-        "@go_googleapis//google/type:interval_proto",
+        "@googleapis//google/type:interval_proto",
+        # "@com_google_protobuf//src/google/protobuf/compiler/java:names"
     ],
 )
 
